--- a/ConsoleApp1/HTMLPage1.html
+++ b/ConsoleApp1/HTMLPage1.html
@@ -6,14 +6,20 @@
 </head>
 <style>
     #sidebar {
-        width:400px;
-} 
+        width: 800px 
+    }
+    #sidebar {
+        height: 300px;
+    }
 </style>
 <body>
     <div id="sidebar">
-        <iframe src="https://ru.widgets.investing.com/live-currency-cross-rates?theme=darkTheme" width="100%" height="100%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"></iframe>
-        <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">Предоставлено <a href="https://ru.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=LIVE_CURRENCY_X_RATES&amp;utm_content=Footer%20Link" target="_blank" rel="nofollow">Investing.com</a>
+        <iframe src="https://ru.widgets.investing.com/live-currency-cross-rates?theme=darkTheme&roundedCorners=true&pairs=1,3,2,4,7,5,8,6,49,13,16,47,58,53,15,48,42,155,43,54,9275,9276,9309,9310,9277,9279,9280,9282,9283,9284,9285,9286,9287,9326,9289,9290,9316,1467,9317,9291,14472,9321,9292,9293,9328,9313,9324,9296,1469,9315,9320,9298,9299,9300,9301,9303,9327,9304,9305,9306,9307,9329,9308,1153333,1089805,9330,9331,9362,9333,9334,9378,9341,9342,1479,9370,9380,9367,9438,1089809,1073358,106,9467,9560,9501,9507,9518,9530" width="100%" height="100%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0">
+        </iframe>
+        <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">Предоставлено 
+        <a href="https://ru.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=LIVE_CURRENCY_X_RATES&amp;utm_content=Footer%20Link" target="_blank" rel="nofollow">Investing.com
+        </a>
         </div>
-</div>
+    </div>
 </body>
 </html>
